--- a/css/styles.css
+++ b/css/styles.css
@@ -1,4 +1,149 @@
+@import url('https://fonts.googleapis.com/css2?family=Shippori+Antique+B1&display=swap');
 body {
     background-color: #818cf8;
     background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='8' height='8' viewBox='0 0 8 8'%3E%3Cg fill='%23f1f5f9' fill-opacity='0.26'%3E%3Cpath fill-rule='evenodd' d='M0 0h4v4H0V0zm4 4h4v4H4V4z'/%3E%3C/g%3E%3C/svg%3E");
+    font-family: 'Shippori Antique B1', sans-serif;
+    font-weight: 300;
+    font-style: normal;
+}
+.flex-container {
+    display: flex;
+    flex-flow: wrap;
+    justify-content: space-between;
+    align-items: center;
+}
+.inner-container {
+    padding: 0 1rem;
+}
+
+/* ************************* typography ************************* */
+h1{
+    font-size: 1.125rem;
+    line-height: 3.75rem; /*60px*/
+}
+h2{
+    font-family: 'Shippori Antique B1', sans-serif;
+    font-weight: 700;
+    font-style: normal;
+}
+
+/* ************************* header ************************* */
+header{
+    background-color: #f8fafc;
+}
+button {
+    background-color: #f8fafc;
+    border: none;
+}
+svg{
+    width: 1.25rem;
+}
+header a {
+    text-decoration: none;
+    color: #475569;
+    font-size: 0.875rem;
+}
+h1 a{
+    color: #dc2626;
+}
+nav{
+    position: absolute;
+    background-color: #f8fafc;
+    width: 98vw;
+    top: 3.75rem;
+    left: 0;
+    visibility: hidden;
+    opacity: 0;
+    /* max-height: 0; */
+}
+/* create a special class that will show the nav , this class
+exists in the css file for now . donot add to the html markup 
+the hs file will add this class to the html
+ for use when the button is clicked . */
+ 
+.show-nav{
+    /* max-height: 250; */
+    visibility: visible;
+    opacity: 1;
+    overflow: visible;
+}
+.menu li{
+    line-height: 3.125rem;
+}
+.menu a{
+    display: flex;
+    justify-content: space-between;
+    padding: 0 0.5rem;
+}
+.menu a:hover{
+    background-color: #e2e8f0;
+}
+.menu svg{
+    width: 10px;
+}
+.submenu {
+    visibility: hidden;
+    opacity: 0;
+    overflow: hidden;
+    max-height: 0;
+}
+.submenu li{
+    border-bottom: 1px solid #cbd5e1;
+}
+
+.menu li:hover > .submenu {
+    visibility: visible;
+    opacity: 1;
+    overflow: visible;
+    max-height: 14.0625rem;
+}
+
+@media screen and (min-width: 1100px) {
+    .inner-container{
+        padding: 0;
+        width: 1000px;
+        margin: 0 auto;
+        text-align: center;
+    }
+
+    .btn{
+        display: none;
+    }
+
+    nav{
+        position: unset;
+        visibility: visible;
+        opacity: 1;
+        overflow: visible;
+        width: unset;
+    }
+
+    /* .inner-container > a{
+        order: 1;
+    } */
+
+     a:nth-child(3){
+        order: 1;
+    } 
+
+    /* todo 
+    1 : layout the 3 top level links horizentaly 
+    2.: layout the submenu links (dropdown for wider screen)
+    3.: add docus or keyboard focus to the dropdown links.
+    
+    */
+
+    ul.menu{
+        display: flex;
+        gap: 0.5rem;
+        justify-content: flex-end;
+    }
+
+    ul.submenu{
+        position: absolute;
+        background-color: #f8fafc;
+    }
+
+
+
 }
